@@ -59,14 +59,14 @@ public final class ITParseAndDiceRollerMultiplicationDiceRollResults {
         result = rolled.next();
 
         dice = result.getDice();
-        Assertions.assertEquals(new Integer(1), dice.getQuantity());
-        Assertions.assertEquals(new Integer(1), dice.getSides());
+        Assertions.assertEquals(Integer.valueOf(1), dice.getQuantity());
+        Assertions.assertEquals(Integer.valueOf(1), dice.getSides());
 
         result = rolled.next();
 
         dice = result.getDice();
-        Assertions.assertEquals(new Integer(2), dice.getQuantity());
-        Assertions.assertEquals(new Integer(1), dice.getSides());
+        Assertions.assertEquals(Integer.valueOf(2), dice.getQuantity());
+        Assertions.assertEquals(Integer.valueOf(1), dice.getSides());
     }
 
     @Test
@@ -105,14 +105,14 @@ public final class ITParseAndDiceRollerMultiplicationDiceRollResults {
         rolls = result.getAllRolls().iterator();
 
         Assertions.assertEquals(1, Iterables.size(result.getAllRolls()));
-        Assertions.assertEquals(new Integer(1), rolls.next());
+        Assertions.assertEquals(Integer.valueOf(1), rolls.next());
 
         result = rolled.next();
         rolls = result.getAllRolls().iterator();
 
         Assertions.assertEquals(2, Iterables.size(result.getAllRolls()));
-        Assertions.assertEquals(new Integer(1), rolls.next());
-        Assertions.assertEquals(new Integer(1), rolls.next());
+        Assertions.assertEquals(Integer.valueOf(1), rolls.next());
+        Assertions.assertEquals(Integer.valueOf(1), rolls.next());
     }
 
     @Test
@@ -128,7 +128,7 @@ public final class ITParseAndDiceRollerMultiplicationDiceRollResults {
 
         history = new DiceRoller().transform(expression);
 
-        Assertions.assertEquals(new Integer(2), history.getTotalRoll());
+        Assertions.assertEquals(Integer.valueOf(2), history.getTotalRoll());
     }
 
     @Test
@@ -148,11 +148,11 @@ public final class ITParseAndDiceRollerMultiplicationDiceRollResults {
 
         result = rolled.next();
 
-        Assertions.assertEquals(new Integer(1), result.getTotalRoll());
+        Assertions.assertEquals(Integer.valueOf(1), result.getTotalRoll());
 
         result = rolled.next();
 
-        Assertions.assertEquals(new Integer(2), result.getTotalRoll());
+        Assertions.assertEquals(Integer.valueOf(2), result.getTotalRoll());
     }
 
 }
