@@ -44,7 +44,7 @@ public final class ITParseAndDiceRollerSubstractionNumberTotalRoll {
 
         result = new DiceRoller().transform(parsed).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(-4), result);
+        Assertions.assertEquals(Integer.valueOf(-4), result);
     }
 
     @Test
@@ -60,7 +60,7 @@ public final class ITParseAndDiceRollerSubstractionNumberTotalRoll {
 
         result = new DiceRoller().transform(parsed).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(-13), result);
+        Assertions.assertEquals(Integer.valueOf(-13), result);
     }
 
     @Test
@@ -76,7 +76,7 @@ public final class ITParseAndDiceRollerSubstractionNumberTotalRoll {
 
         result = new DiceRoller().transform(parsed).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(-1), result);
+        Assertions.assertEquals(Integer.valueOf(-1), result);
     }
 
     @Test
@@ -92,7 +92,7 @@ public final class ITParseAndDiceRollerSubstractionNumberTotalRoll {
 
         result = new DiceRoller().transform(parsed).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(3), result);
+        Assertions.assertEquals(Integer.valueOf(3), result);
     }
 
     @Test
@@ -108,7 +108,7 @@ public final class ITParseAndDiceRollerSubstractionNumberTotalRoll {
 
         result = new DiceRoller().transform(parsed).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(-3), result);
+        Assertions.assertEquals(Integer.valueOf(-3), result);
     }
 
 }
