@@ -40,9 +40,9 @@ public final class ITDefaultDiceParserSignedDiceStructure {
 
         operation = (DiceOperand) new DefaultDiceParser().parse("-1d1");
 
-        Assertions.assertEquals(new Integer(-1),
+        Assertions.assertEquals(Integer.valueOf(-1),
                 operation.getDice().getQuantity());
-        Assertions.assertEquals(new Integer(1), operation.getDice().getSides());
+        Assertions.assertEquals(Integer.valueOf(1), operation.getDice().getSides());
     }
 
     @Test
@@ -52,9 +52,9 @@ public final class ITDefaultDiceParserSignedDiceStructure {
 
         operation = (DiceOperand) new DefaultDiceParser().parse("+1d1");
 
-        Assertions.assertEquals(new Integer(1),
+        Assertions.assertEquals(Integer.valueOf(1),
                 operation.getDice().getQuantity());
-        Assertions.assertEquals(new Integer(1), operation.getDice().getSides());
+        Assertions.assertEquals(Integer.valueOf(1), operation.getDice().getSides());
     }
 
 }
