@@ -50,7 +50,7 @@ public final class TestDiceRollerSubtractionOperationValue {
 
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(-1), rolled);
+        Assertions.assertEquals(Integer.valueOf(-1), rolled);
     }
 
     @Test
@@ -83,7 +83,7 @@ public final class TestDiceRollerSubtractionOperationValue {
 
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(0), rolled);
+        Assertions.assertEquals(Integer.valueOf(0), rolled);
     }
 
     @Test
@@ -110,7 +110,7 @@ public final class TestDiceRollerSubtractionOperationValue {
 
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(-4), rolled);
+        Assertions.assertEquals(Integer.valueOf(-4), rolled);
     }
 
     @Test
@@ -131,7 +131,7 @@ public final class TestDiceRollerSubtractionOperationValue {
 
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(3), rolled);
+        Assertions.assertEquals(Integer.valueOf(3), rolled);
     }
 
     @Test
@@ -159,7 +159,7 @@ public final class TestDiceRollerSubtractionOperationValue {
 
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(2), rolled);
+        Assertions.assertEquals(Integer.valueOf(2), rolled);
     }
 
     @Test
@@ -179,7 +179,7 @@ public final class TestDiceRollerSubtractionOperationValue {
         operation = new SubtractionOperation(left, right);
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(1), rolled);
+        Assertions.assertEquals(Integer.valueOf(1), rolled);
     }
 
     @Test
@@ -199,7 +199,7 @@ public final class TestDiceRollerSubtractionOperationValue {
 
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(-3), rolled);
+        Assertions.assertEquals(Integer.valueOf(-3), rolled);
     }
 
     @Test
@@ -226,7 +226,7 @@ public final class TestDiceRollerSubtractionOperationValue {
 
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(-4), rolled);
+        Assertions.assertEquals(Integer.valueOf(-4), rolled);
     }
 
     @Test
@@ -245,7 +245,7 @@ public final class TestDiceRollerSubtractionOperationValue {
 
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(0), rolled);
+        Assertions.assertEquals(Integer.valueOf(0), rolled);
     }
 
 }
